--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
+  retrofit: ^4.0.3
+  analyzer: ^6.2.0
+  dio: ^5.3.3
+  json_serializable: ^6.7.1
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +53,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  retrofit_generator: ^8.0.3
+  build_runner: ^2.4.6
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
