--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   analyzer: ^6.2.0
   dio: ^5.3.3
   json_serializable: ^6.7.1
+  dartz: ^0.10.1
+  internet_connection_checker: ^1.0.0+1
 
 
 
