--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   json_serializable: ^6.7.1
   dartz: ^0.10.1
   internet_connection_checker: ^1.0.0+1
+  pretty_dio_logger: ^1.3.1
 
 
 
