--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dartz: ^0.10.1
   internet_connection_checker: ^1.0.0+1
   pretty_dio_logger: ^1.3.1
+  shared_preferences: ^2.2.2
 
 
 
