--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   pretty_dio_logger: ^1.3.1
   shared_preferences: ^2.2.2
+  freezed: ^2.4.5
 
 
 
